--- a/GameApplication/CMakeLists.txt
+++ b/GameApplication/CMakeLists.txt
@@ -4,11 +4,12 @@ project (GameApplication)
 set(CMAKE_CXX_LINK_EXECUTABLE "${CMAKE_CXX_LINK_EXECUTABLE} -l")
 
 find_package(TinyXML REQUIRED)
+find_package(SDL2 REQUIRED)
 
 add_subdirectory(Utils)
 
 add_library(GameApplication STATIC src/GameApplication.cpp include/Common.h include/GameApplication.h)
 
-include_directories(GameApplication include/ Utils/include ${TINYXML_INCLUDE_DIR})
+include_directories(GameApplication include/ Utils/include ${TINYXML_INCLUDE_DIR} ${SDL2_INCLUDE_DIR} )
 # create the program
-target_link_libraries(GameApplication Utils ${TINYXML_LIBRARIES} ${CMAKE_DL_LIBS})
+target_link_libraries(GameApplication Utils ${TINYXML_LIBRARIES} ${CMAKE_DL_LIBS} ${SDL2_LIBRARY})
