--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,7 @@ find_package(TinyXML REQUIRED)
 
 add_subdirectory(GameApplication)
 add_executable(GP2BaseCode1617 src/main.cpp src/MyGame.cpp include/MyGame.h)
-include_directories(GP2BaseCode1617 GameApplication/include/ include/ ${SDL2_INCLUDE_DIR} ${TINYXML_INCLUDE_DIR})
+include_directories(GP2BaseCode1617 GameApplication/include/ include/ ${SDL2_INCLUDE_DIR} ${TINYXML_INCLUDE_DIR}${OPENGL_INCLUDE_DIRS} ${GLM_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS})
 
 target_link_libraries (GP2BaseCode1617 GameApplication)
 
